--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
   "name": "glitter",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
+  "main":"dist/Glitter.common.js",
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
+    "build": "vue-cli-service build --target lib --name Glitter src/App.vue",
     "test:unit": "vue-cli-service test:unit",
     "lint": "vue-cli-service lint"
   },
