--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
   },
   "dependencies": {
     "core-js": "^3.3.2",
+    "events": "^3.0.0",
     "vue": "^2.6.10",
     "vue-class-component": "^7.1.0",
     "vue-material-design-icons": "^4.1.0",
     "vue-property-decorator": "^8.3.0"
   },
   "devDependencies": {
+    "@types/events": "^3.0.0",
     "@types/jest": "^24.0.11",
     "@vue/cli-plugin-babel": "^4.0.0",
     "@vue/cli-plugin-typescript": "^4.0.0",
