--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -10,4 +10,6 @@ jobs:
     steps:
     - uses: actions/checkout@v1
     - name: Run unit tests
-      run: npm run test:unit
+      run: |
+        npm install @vue/cli@3.12.0
+        npm run test:unit
