buildの設定を元にもどす
vue.config.jsなどをいじってassetのサイズの軽減を図っていたが
(https://github.com/Office-asoT/Glitter/commit/5c4c83823ee68e34e8185163ce4d0954f21575f4)
挙動がいまいちつかめていなかった。

一度この変更を戻して、node_modulesふっとばして再度npm iして
ビルドすると、先程の変更をおこなったときと同じ小さいサイズの
assetが生成できたので、これらの変更は行なわないことにする。

closes #59

--- a/package.json
+++ b/package.json
@@ -8,12 +8,12 @@
   ],
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "TARGET=lib vue-cli-service build --target lib --name Glitter src/Glitter.vue",
+    "build": "vue-cli-service build --target lib --name Glitter src/Glitter.vue",
     "test:unit": "vue-cli-service test:unit",
     "lint": "vue-cli-service lint --no-fix"
   },
   "dependencies": {
-    "core-js": "^3.3.2",
+    "core-js": "^3.4.5",
     "events": "^3.0.0",
     "vue": "^2.6.10",
     "vue-class-component": "^7.1.0",
