--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@
 title: "@asot/glitter"
 # email: your-email@example.com
 description: >- # this means to ignore newlines until "baseurl:"
-  An image gallery component like Lightbox for or Vue 2.x.
+  An image gallery component like Lightbox for Vue 2.x.
 baseurl: "/Glitter" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: parc_b
